menu.css
html, body {
  font-size: 10px;
  font-family: 'Roboto', sans-serif;
  height: 100%;
  user-select: none;
  -webkit-user-select: none; 
}

body{
  background-color: #000000;
  font-family: sans-serif;
  color: #FFFFFF;
  margin: 0;
  height: 100%;
  display: flex;
  -webkit-tap-highlight-color: transparent;
  opacity: 0;
}
.flexcontainer{
  display: flex;
  justify-content: center;
  align-items: flex-start;
  height: 100vh;
  width: 100%;
  overflow-y: auto;
  scrollbar-width: none;
}
.flexcontainer::-webkit-scrollbar {
  display: none;
}
#rightContainer {
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-left: 1px solid white;
}
#rightContainer #payment-button-container {
  width: 100%;
  padding-top: 5%;
}
#rightContainer #paypal-button-container {
  text-align: center;
  font-size: 32px;
  float: left;
  width: 30%;
  padding-left: 13%;
}
#rightContainer #payment-button-divider {
  font-size: 31px;
  text-align: center;
  padding-left: 5%;
  padding-right: 5%;
  float: left;
}
#rightContainer #subscribe-button-container{
  text-align: center;
  font-size: 32px;
  float: left;
  width: 30%;
  padding-right: 13%;
}
#rightContainer #subscribe-button{
  position: relative;
  display: inline-block;
  width: 100%;
  height: 55px;
  min-width: 150px;
  max-width: 750px;
  background: #00358e;
  border-radius: 28px;
}
#subscribe-button p {
  margin: 0;
  padding-top: 2%;
  font-style: oblique;
  font-weight: bold;
}
#rightContainer #return-button {
  width: 40px;
  padding: 30px;
  cursor: pointer;
  position: absolute;
  top: 0;
  right: 0;
  float: right;
}
#rightContainer #betaBanner {
  font-size: 32px;
  font-style: italic;
  opacity: 0.2;
}
#rightContainer #preview-container {
  padding: 10%;
  text-align: center;
}
#rightContainer #preview-image {
  border-radius: 35px;
  text-align: center;
  box-shadow: 0 0 20px 8px #f49c04;
}
#rightContainer #details {
  text-align: center;
  padding-top: 10%;
  font-size: 32px;
}
.flexdiv{
  display: flex;
  flex-wrap: wrap;
  flex-grow: 1;
  margin: 2rem 3rem;
}
.gameApp{
  cursor: pointer;
  display: flex;
  flex-direction: column;
  margin: 0.5rem 1.5rem;
}
.gameimg{
  padding: 0;
  height: 16rem;
  width: 20rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 16px;
  position: relative;
}
.gameimg img{
  object-fit: cover;
  border-radius: 35px;
}
.gameimg .icon {
  width: 100%;
  height: 100%;
  position: absolute;
}
.gameimg .overlay{
  position: absolute;
  visibility: hidden;
}
.gamename{
  text-align: center;
  padding: 1rem 0.5rem;
  font-size: 2.4rem;
  max-width: 20rem;
  line-height: 2.3rem;
}

#newImage {
  height: 5rem;
  width: 5rem;
  z-index: 1;
  left: 15.5rem;
  position: absolute;
  bottom: 11.5rem;
}

#ddmessage {
  width: 100%;
  height: 100%;
  display: none;
  justify-content: center;
  text-align: center;
  align-items: center;
  font-size: 2.7rem;
  font-family: "Roboto";
  z-index: 999999;
}

#no_games_container {
  display: none;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  font-size: 2.7rem;
  padding: 0 3rem;
  line-height: 3rem;
  margin: auto;
  text-align: center;
}

/* Base font size 10.1 for responsive layout in games screen*/
@media screen and (min-width: 1900px) {
  html, body {
      font-size: 17.78px;
  }

  .gameApp {
    margin: 0.5rem 1.6rem;
    padding: 0rem 1rem;
    max-width: 15rem;
  }

  .gameimg{
    height: 13.5rem;
    width: 13.5rem;
  }

  .gamename{
    padding: 0.5rem;
    font-size: 2.6rem;
    max-width: 16rem;
    line-height: 2.6rem;
  }
  
  #newImage {
    left: 10rem;
    bottom: 10rem;
  }
}

/* Base font size for 14.4P responsive layout in games screen*/
@media screen and (min-width: 1024px) and (min-height: 1220px) {
  html, body {
    font-size: 12.22px;
  }

  .flexdiv {
    gap: unset;
    margin: 10rem 5rem;
    justify-content: space-between;
  }

  .gameApp {
    margin: 2rem 0rem;
  }

  .gameimg {
    height: 21rem;
    width: 21rem;
    border-radius: none;
  }
  
  .gameimg img {
    object-fit: contain;
    border: 1px solid rgba(255, 255, 255, 0.1);
    border-radius: 10px;
  }

  .gamename {
    font-size: 2.7rem;
    line-height: 2.8rem;
  }
}

/* Base font size for 10.25 & 12.3L responsive layout in games screen*/
@media screen and (min-width: 1724px) and (max-height: 618px) {
  html, body {
    font-size: 14.44px;
  }

  .gameimg {
    height: 12.8rem;
    width: 20rem;
  }

  .flexdiv {
    margin: 2rem;
    gap: unset;
  }

  .gamename {
    max-width: 20rem;
    font-size: 2.4rem;
    line-height: 2.4rem;
  }

  .gameApp {
    margin: 0.5rem 1.5rem;
  }
}

/* Base font size for 12P responsive layout in games screen 800 * 1050*/
 @media screen and (max-width: 800px){
  html, body {
    font-size: 9.63px;
  }

  .gameimg {
    height: 24rem;
    width: 20rem;
  }

  .flexdiv {
    gap: 0rem 3rem;
    justify-content: flex-start;
  }

  .gamename {
    font-size: 2.8rem;
    line-height: 3rem;
  }
}

/* Base font size for 12.1P responsive layout in games screen 1200 * 1575*/
@media screen and (min-width: 1200px) and (min-height: 1360px){
  html, body {
    font-size: 14.07px;
  }

  .gameimg {
    height: 24rem;
    width: 20.3rem;
  }

  .flexdiv {
    gap: 0rem 2rem;
    margin: 0.5rem 5rem;
    justify-content: flex-start;
  }

  .gamename {
    font-size: 2.8rem;
    line-height: 3rem;
  }

  .gameApp {
    margin: 1.5rem;
  }
}

